refactor: generate background at build

--- a/scaffolding/demo/phasers-revenge/package.json
+++ b/scaffolding/demo/phasers-revenge/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predev": "node scripts/generate-background.js",
     "dev": "vite",
+    "prebuild": "node scripts/generate-background.js",
     "build": "vite build",
     "preview": "vite preview"
   },
