--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "installCommand": "cd scaffolding/demo/phasers-revenge && npm install",
-  "buildCommand": "cd scaffolding/demo/phasers-revenge && npm run build",
+  "buildCommand": "npm --prefix scaffolding/demo/phasers-revenge run build",
   "outputDirectory": "scaffolding/demo/phasers-revenge/dist"
 }
